# ALBERICH

./: .gitmodules  CMakeLists.txt  README.de.md  README.md
CMake/: AggressiveOptimizations.cmake
Evaluation/: EvalResult.cpp  EvalResult.h  EvaluateExpression.cpp  IdentifyNodeCases.h  Scope.h
LanguageRegister/: BackendRegister.h  FunctionRegister.h  KeywordRegister.cpp  KeywordRegister.h  RegisterInstances.cpp
Objects/: IObject.h  IObjectWrappers.h  Variable.h
SemanticAnalysis/: AST.cpp  AST.h
TypeInstances/: BOOL.cpp  INT.cpp  INT.h  InstanceIncludes.cpp  Operations.cpp  Operations.h  STRING.cpp  STRING.h  STRUCT.h  TENSOR_EXPRESSION.h  TENSOR_EXPRESSION_EQUATION.cpp  TENSOR_EXPRESSION_IDN.cpp  gatheredInstances.cpp
src/Alberich/: Interpreter.cpp  Interpreter.h  preDecls.h
src/Alberich/Drivers/: __Asserts.cpp  __Asserts.h  __StringProcessing.cpp  __StringProcessing.h
src/Alberich/Evaluation/: EvaluateExpression.cpp  EvaluateExpression.h  IdentifyNodeCases.cpp  IdentifyNodeCases.h  Scope.cpp  Scope.h
src/Alberich/LanguageRegister/: BackendRegister.cpp  BackendRegister.h  FunctionRegister.h  KeywordRegister.h  RegisterInstances.cpp  RegisterInstances.h  TypeRegister.cpp  TypeRegister.h
src/Alberich/Objects/: IObject.cpp  IObject.h  IObjectWrappers.cpp  IObjectWrappers.h  Variable.cpp  Variable.h
src/Alberich/SemanticAnalysis/: AST.cpp  Lexer.cpp  Lexer.h
src/Alberich/TypeInstances/: ARGS.cpp  ARGS.h  BOOL.h  DOUBLE.cpp  DOUBLE.h  InstanceIncludes.h  Operations.cpp  PermutationGenerator.h  STRUCT.cpp  STRUCT.h  TENSOR_EXPRESSION.cpp  TENSOR_EXPRESSION_EQUATION.h  VOID.cpp  VOID.h  gatheredInstances.cpp  gatheredInstances.h
thirdPartyLicenses/: lsp-framework.LICENSE
